# RAG_OMS

RAG_OMS_V2/: pyproject.toml
RAG_OMS_V2/rag-oms-v2/src/: appv1.py  config.py  requirements.txt
RAG_OMS_V2/rag-oms-v2/src/store/RAG_Document/: chroma.sqlite3
